exports[`test renders cordova version 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="jim bob" />
<Right mobile={true} classes={{...}} ratioClasses={{...}} background="http://test.com/photo.jpg" blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<div onClick={[Function]} className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jim
 
bob
</h4>
<p className="text-light-primary flush">
<em>
anderson
</em>
</p>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<Toggle items={{...}} toggle={[Function]} />
<div>
<h1>
test
</h1>
</div>
</Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="jim bob" />
<Right mobile={true} classes={{...}} ratioClasses={{...}} background="http://test.com/photo.jpg" blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<input onChange={[Function]} type="file" className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jim
 
bob
</h4>
<p className="text-light-primary flush">
<em>
anderson
</em>
</p>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<Toggle items={{...}} toggle={[Function]} />
<div>
<h1>
test
</h1>
</div>
</Left>
</div>
`;

exports[`test works without city 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="jim bob" />
<Right mobile={true} classes={{...}} ratioClasses={{...}} background="http://test.com/photo.jpg" blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<div onClick={[Function]} className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jim
 
bob
</h4>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<Toggle items={{...}} toggle={[Function]} />
<div>
<h1>
test
</h1>
</div>
</Left>
</div>
`;
